// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataCard > Product Card > should render product card correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-pjilya"
  style="margin-bottom: 16px;"
>
  <div
    class="ant-card-body"
    style="padding: 16px;"
  >
    <div
      style="display: flex; align-items: flex-start; margin-bottom: 12px;"
    >
      <div
        style="width: 56px; height: 56px; min-width: 56px; min-height: 56px; display: flex; align-items: center; justify-content: center; border-radius: 12px; margin-right: 14px; overflow: hidden;"
      >
        <div
          class="ant-image css-dev-only-do-not-override-pjilya"
          style="width: 48px; height: 48px;"
        >
          <img
            alt="Test Product"
            class="ant-image-img css-dev-only-do-not-override-pjilya"
            height="48"
            src="https://example.com/thumbnail.jpg"
            style="height: 48px; object-fit: cover; border-radius: 8px; background: transparent;"
            width="48"
          />
        </div>
      </div>
      <div
        style="flex: 1 1 0%; min-width: 0;"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-pjilya"
          style="margin: 0px 0px 4px 0px; word-break: break-word;"
        >
          Test Product
        </h5>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px; word-break: break-word;"
        >
          This is a test product description that is longer ...
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-pjilya ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
          style="flex-wrap: wrap;"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-blue css-dev-only-do-not-override-pjilya"
            >
              TestBrand
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-green css-dev-only-do-not-override-pjilya"
            >
              Electronics
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center;"
    >
      <div>
        <div
          style="font-size: 18px; font-weight: bold; color: rgb(24, 144, 255);"
        >
          $
          99.99
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102);"
        >
          Stock: 
          100
        </div>
      </div>
      <div
        style="text-align: right;"
      >
        <span
          class="ant-tag ant-tag-green css-dev-only-do-not-override-pjilya"
        >
          4.5
           ⭐
        </span>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 100%;"
    >
      <span>
        <div
          data-testid="action-buttons"
        >
          <button
            data-testid="view-btn"
          >
            View
          </button>
          <button
            data-testid="edit-btn"
          >
            Edit
          </button>
          <button
            data-testid="delete-btn"
          >
            Delete
          </button>
        </div>
      </span>
    </li>
  </ul>
</div>
`;

exports[`DataCard > Product Card > should render product card with favorite functionality 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-pjilya"
  style="margin-bottom: 16px;"
>
  <div
    class="ant-card-body"
    style="padding: 16px;"
  >
    <div
      style="display: flex; align-items: flex-start; margin-bottom: 12px;"
    >
      <div
        style="width: 56px; height: 56px; min-width: 56px; min-height: 56px; display: flex; align-items: center; justify-content: center; border-radius: 12px; margin-right: 14px; overflow: hidden;"
      >
        <div
          class="ant-image css-dev-only-do-not-override-pjilya"
          style="width: 48px; height: 48px;"
        >
          <img
            alt="Test Product"
            class="ant-image-img css-dev-only-do-not-override-pjilya"
            height="48"
            src="https://example.com/thumbnail.jpg"
            style="height: 48px; object-fit: cover; border-radius: 8px; background: transparent;"
            width="48"
          />
        </div>
      </div>
      <div
        style="flex: 1 1 0%; min-width: 0;"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-pjilya"
          style="margin: 0px 0px 4px 0px; word-break: break-word;"
        >
          Test Product
        </h5>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px; word-break: break-word;"
        >
          This is a test product description that is longer ...
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-pjilya ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
          style="flex-wrap: wrap;"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-blue css-dev-only-do-not-override-pjilya"
            >
              TestBrand
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-green css-dev-only-do-not-override-pjilya"
            >
              Electronics
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center;"
    >
      <div>
        <div
          style="font-size: 18px; font-weight: bold; color: rgb(24, 144, 255);"
        >
          $
          99.99
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102);"
        >
          Stock: 
          100
        </div>
      </div>
      <div
        style="text-align: right;"
      >
        <span
          class="ant-tag ant-tag-green css-dev-only-do-not-override-pjilya"
        >
          4.5
           ⭐
        </span>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 100%;"
    >
      <span>
        <div
          data-testid="action-buttons"
        >
          <button
            data-testid="view-btn"
          >
            View
          </button>
          <button
            data-testid="edit-btn"
          >
            Edit
          </button>
          <button
            data-testid="delete-btn"
          >
            Delete
          </button>
          <button
            data-testid="favorite-btn"
          >
            ❤️
          </button>
        </div>
      </span>
    </li>
  </ul>
</div>
`;

exports[`DataCard > User Card > should render user card correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-pjilya"
  style="margin-bottom: 16px;"
>
  <div
    class="ant-card-body"
    style="padding: 16px;"
  >
    <div
      style="display: flex; align-items: center; margin-bottom: 12px;"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon css-dev-only-do-not-override-pjilya"
        style="width: 60px; height: 60px; font-size: 30px; margin-right: 12px;"
      >
        <img
          src="https://example.com/avatar.jpg"
        />
      </span>
      <div
        style="flex: 1 1 0%;"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-pjilya"
          style="margin: 0px 0px 4px 0px;"
        >
          John
           
          Doe
        </h5>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px;"
        >
          @
          johndoe
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px;"
        >
          john.doe@example.com
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-pjilya ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-blue css-dev-only-do-not-override-pjilya"
            >
              male
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-red css-dev-only-do-not-override-pjilya"
            >
              A+
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center;"
    >
      <div>
        <div
          style="font-size: 14px; color: rgb(102, 102, 102);"
        >
          Age: 
          30
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102);"
        >
          Test Company
        </div>
      </div>
      <div
        style="text-align: right;"
      >
        <span
          class="ant-badge ant-badge-not-a-wrapper css-dev-only-do-not-override-pjilya"
        >
          <sup
            class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
            data-show="true"
            style="background-color: rgb(24, 144, 255);"
            title="30"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  3
                </span>
              </span>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  0
                </span>
              </span>
            </bdi>
          </sup>
        </span>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 100%;"
    >
      <span>
        <div
          data-testid="action-buttons"
        >
          <button
            data-testid="view-btn"
          >
            View
          </button>
          <button
            data-testid="edit-btn"
          >
            Edit
          </button>
          <button
            data-testid="delete-btn"
          >
            Delete
          </button>
        </div>
      </span>
    </li>
  </ul>
</div>
`;

exports[`DataCard > User Card > should render user card with favorite functionality 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-pjilya"
  style="margin-bottom: 16px;"
>
  <div
    class="ant-card-body"
    style="padding: 16px;"
  >
    <div
      style="display: flex; align-items: center; margin-bottom: 12px;"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon css-dev-only-do-not-override-pjilya"
        style="width: 60px; height: 60px; font-size: 30px; margin-right: 12px;"
      >
        <img
          src="https://example.com/avatar.jpg"
        />
      </span>
      <div
        style="flex: 1 1 0%;"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-pjilya"
          style="margin: 0px 0px 4px 0px;"
        >
          John
           
          Doe
        </h5>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px;"
        >
          @
          johndoe
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102); margin-bottom: 8px;"
        >
          john.doe@example.com
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-pjilya ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-blue css-dev-only-do-not-override-pjilya"
            >
              male
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-tag ant-tag-red css-dev-only-do-not-override-pjilya"
            >
              A+
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; justify-content: space-between; align-items: center;"
    >
      <div>
        <div
          style="font-size: 14px; color: rgb(102, 102, 102);"
        >
          Age: 
          30
        </div>
        <div
          style="font-size: 12px; color: rgb(102, 102, 102);"
        >
          Test Company
        </div>
      </div>
      <div
        style="text-align: right;"
      >
        <span
          class="ant-badge ant-badge-not-a-wrapper css-dev-only-do-not-override-pjilya"
        >
          <sup
            class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
            data-show="true"
            style="background-color: rgb(24, 144, 255);"
            title="30"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  3
                </span>
              </span>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  0
                </span>
              </span>
            </bdi>
          </sup>
        </span>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 100%;"
    >
      <span>
        <div
          data-testid="action-buttons"
        >
          <button
            data-testid="view-btn"
          >
            View
          </button>
          <button
            data-testid="edit-btn"
          >
            Edit
          </button>
          <button
            data-testid="delete-btn"
          >
            Delete
          </button>
          <button
            data-testid="favorite-btn"
          >
            🤍
          </button>
        </div>
      </span>
    </li>
  </ul>
</div>
`;
